# IronRoot

./: Cargo.toml  LICENSE  README.md
ai/: AGENTS.md  INSTRUCTIONS.md
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  command.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: entity.rs  lib.rs  service.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  router.rs
docs/: architecture.md  roadmap.md
mcp/: README.md
mcp/servers/example_server/: Cargo.toml
mcp/servers/example_server/src/: main.rs
templates/cli-app/: Cargo.toml  README.md
templates/cli-app/src/: main.rs
templates/desktop-app/: Cargo.toml  README.md
templates/desktop-app/src/: main.rs
templates/web-app/: Cargo.toml  README.md
templates/web-app/src/: main.rs
